--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
     "start": "node index.js"
-    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +17,8 @@
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
